--- a/About.html
+++ b/About.html
@@ -40,7 +40,7 @@
 
 <div class="flex-container">
 	<div class="image">
-        <img id="mainimg" src="C:\Users\Leanne\Documents\Blog\Images\me.jpg">
+        <img id="mainimg" src="https://user-images.githubusercontent.com/72442994/95190169-2ed0e980-07cf-11eb-895b-5a0d135792fd.jpg">
     </div>
 	   <div class="details">
 	     <p><strong>Name:</strong> Leanne<br>
