--- a/Blog.html
+++ b/Blog.html
@@ -39,7 +39,7 @@
 	<p>As a teenager I would spend my spare time creating websites. This deep interest lead me to achieve qualifications in tightly related subjects up until level 3. After this, life had different plans for me however photography was still a dominant passion during this time. During the 2020 pandemic lockdown, my life slowed down. Prior to this everyday had been 100mph and now it had skid to a complete halt. What this made me discover however, was that having all this free time to think, to just be; old interests and hobbies quickly started to fill up my time. It was not long before I was dipping my toes back into coding and taking a small mooc to refresh my already existing skills. Then I dove into an online web development bootcamp. It began to take up all of my time! I spent hours studying even through until night.. I love the challenge of working out why a code is not working! Or why it is working, for that matter. Then get so giddy when something works =)
 </p></div>
 
- <img id="mainimg" src="C:\Users\Leanne\Documents\Blog\Images\laptop2.jpg">
+ <img id="mainimg" src="https://user-images.githubusercontent.com/72442994/95190169-2ed0e980-07cf-11eb-895b-5a0d135792fd.jpg">
 
 <div class="who">
 	<h3><strong>Who am I?</strong></h3>
@@ -47,7 +47,7 @@
 An independent worker and a team player with experience of being a team leader; helping to motivate and mentor others to reach their full potential. 
 </div>
 
- <img id="mainimg" src="C:\Users\Leanne\Documents\Blog\Images\code.jpg">
+ <img id="mainimg" src="https://user-images.githubusercontent.com/72442994/95190169-2ed0e980-07cf-11eb-895b-5a0d135792fd.jpg">
 
 <div class="what">
 	<h3><strong>What am I currently working on?</strong></h3>
