--- a/Qualifications.html
+++ b/Qualifications.html
@@ -54,7 +54,7 @@
 </ul>
 </div>
 <div>
-        <img id="mainimg" src="C:\Users\Leanne\Documents\Blog\Images\Iceland1JPG.jpg">
+        <img id="mainimg" src="https://user-images.githubusercontent.com/72442994/95190169-2ed0e980-07cf-11eb-895b-5a0d135792fd.jpg">
 </div>
 <div>
 	<h3>Level 2</h3>
