--- a/Contact.html
+++ b/Contact.html
@@ -20,7 +20,7 @@
 <body>
 
 <div class="nav">
-<a href="Blog.html"><i class="fas fa-home ic-nav"></i></a>
+<a href="index.html"><i class="fas fa-home ic-nav"></i></a>
 <a href="about.html">About</a>
 <a href="qualifications.html">Qualifications</a>
 <a href="contact.html">Contact</a>
